--- a/redirects.yaml
+++ b/redirects.yaml
@@ -605,6 +605,7 @@ openstack/storage/?: "/ceph"
 openstack/support/?: "/advantage"
 openstack/training/?: "/training"
 openstack/partners/?: "/openstack"
+openstack/tco-calculator/?: "/openstack/pricing-calculator"
 packages/kde351.*/?: "https://releases.ubuntu.com/"
 partners/contact-us/?: "https://partner-portal.canonical.com/"
 partners/trainin.*?: "/openstack/training"
