--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     "@reduxjs/toolkit": "1.5.0",
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "1.15.0",
+    "@types/jest": "^26.0.23",
     "date-fns": "2.17.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "2.2.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -83,5 +86,10 @@
   "resolutions": {
     "lodash": "4.17.21",
     "minimatch": "3.0.4"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "tests/setupTests.js"
+    ]
   }
 }
