--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss": "8.2.10",
     "postcss-cli": "8.3.1",
     "prettier": "2.2.1",
+    "prop-types": "15.7.2",
     "sass": "1.27.0",
     "stylelint": "13.9.0",
     "stylelint-config-prettier": "8.0.2",
