--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-syntax-jsx": "7.12.13",
     "@babel/plugin-transform-runtime": "7.12.15",
     "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "^7.14.5",
     "autoprefixer": "10.2.4",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
@@ -49,7 +50,7 @@
     "eslint-plugin-react": "7.23.2",
     "exports-loader": "2.0.0",
     "full-icu": "1.3.1",
-    "jest": "26.6.3",
+    "jest": "^26.6.3",
     "postcss": "8.2.10",
     "postcss-cli": "8.3.1",
     "prettier": "2.2.1",
@@ -71,7 +72,7 @@
     "@reduxjs/toolkit": "1.5.0",
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "1.15.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
     "date-fns": "2.17.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -90,7 +91,10 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "tests/setupTests.js"
-    ]
+      "<rootDir>/tests/setupTests.js"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   }
 }
